--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <a href=csharp.html>csharp</a>
 <a href=sso.html>sso</a>
 <a href="python.html">python</a>
+<a href="javascript.html">javascript</a>
