--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <a href=powershell.html>powershell</a>
 <a href=csharp.html>csharp</a>
 <a href=sso.html>sso</a>
+<a href=javascript.html>javascript</a>
